--- a/index.html
+++ b/index.html
@@ -87,6 +87,31 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5" class="point d-lg-none"></button>
                 </div>
                 <div class="carousel-inner">
+                    <div class="carousel-item ">
+                        <div class="container d-lg-flex justify-content-lg-between align-items-lg-center">
+                            <div class="card d-flex flex-column justify-content-center align-items-center bg_gray" style="width: 18rem;">
+                                <img src="./assets/imgs/western-man-3.png" class="card-img-top cir_img" alt="western-man">
+                                <div class="card-body p-0 d-flex flex-column align-items-center">
+                                    <h5 class="card-title text_paragraph mt-2">Mark Smith</h5>
+                                    <p class="card-text fw-light text-center text_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel. </p>
+                                </div>
+                            </div>
+                            <div class="card d-none d-lg-flex flex-column justify-content-center align-items-center bg_gray" style="width: 18rem;">
+                                <img src="./assets/imgs/western-man-1.png" class="card-img-top cir_img" alt="western-man">
+                                <div class="card-body p-0 d-flex flex-column align-items-center">
+                                    <h5 class="card-title text_paragraph mt-2">Andrew Rathore</h5>
+                                    <p class="card-text fw-light text-center text_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel. </p>
+                                </div>
+                            </div>
+                            <div class="card d-none d-lg-flex flex-column justify-content-center align-items-center bg_gray" style="width: 18rem;">
+                                <img src="./assets/imgs/western-man-2.png" class="card-img-top cir_img" alt="western-man">
+                                <div class="card-body p-0 d-flex flex-column align-items-center">
+                                    <h5 class="card-title text_paragraph mt-2">Vera Duncan</h5>
+                                    <p class="card-text fw-light text-center text_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel. </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="carousel-item active">
                         <div class="container d-lg-flex justify-content-lg-between align-items-lg-center">
                             <div class="card d-flex flex-column justify-content-center align-items-center bg_gray" style="width: 18rem;">
@@ -137,29 +162,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <div class="container d-lg-flex justify-content-lg-between align-items-lg-center">
-                            <div class="card d-flex flex-column justify-content-center align-items-center bg_gray" style="width: 18rem;">
+                    <div class="carousel-item d-lg-none">
+                        <div class="container">
+                            <div class="card w-100 d-flex justify-content-center align-items-center bg_gray" style="width: 18rem;">
                                 <img src="./assets/imgs/western-man-3.png" class="card-img-top cir_img" alt="western-man">
                                 <div class="card-body p-0 d-flex flex-column align-items-center">
                                     <h5 class="card-title text_paragraph mt-2">Mark Smith</h5>
                                     <p class="card-text fw-light text-center text_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel. </p>
                                 </div>
                             </div>
-                            <div class="card d-none d-lg-flex flex-column justify-content-center align-items-center bg_gray" style="width: 18rem;">
-                                <img src="./assets/imgs/western-man-1.png" class="card-img-top cir_img" alt="western-man">
-                                <div class="card-body p-0 d-flex flex-column align-items-center">
-                                    <h5 class="card-title text_paragraph mt-2">Andrew Rathore</h5>
-                                    <p class="card-text fw-light text-center text_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel. </p>
-                                </div>
-                            </div>
-                            <div class="card d-none d-lg-flex flex-column justify-content-center align-items-center bg_gray" style="width: 18rem;">
-                                <img src="./assets/imgs/western-man-2.png" class="card-img-top cir_img" alt="western-man">
-                                <div class="card-body p-0 d-flex flex-column align-items-center">
-                                    <h5 class="card-title text_paragraph mt-2">Vera Duncan</h5>
-                                    <p class="card-text fw-light text-center text_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel. </p>
-                                </div>
-                            </div>
                         </div>
                     </div>
                     <div class="carousel-item d-lg-none">
@@ -168,17 +179,6 @@
                                 <img src="./assets/imgs/western-man-1.png" class="card-img-top cir_img" alt="western-man">
                                 <div class="card-body p-0 d-flex flex-column align-items-center">
                                     <h5 class="card-title text_paragraph mt-2">Andrew Rathore</h5>
-                                    <p class="card-text fw-light text-center text_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel. </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item d-lg-none">
-                        <div class="container">
-                            <div class="card w-100 d-flex justify-content-center align-items-center bg_gray" style="width: 18rem;">
-                                <img src="./assets/imgs/western-man-2.png" class="card-img-top cir_img" alt="western-man">
-                                <div class="card-body p-0 d-flex flex-column align-items-center">
-                                    <h5 class="card-title text_paragraph mt-2">Vera Duncan</h5>
                                     <p class="card-text fw-light text-center text_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper scelerisque mi, in malesuada felis malesuada vel. </p>
                                 </div>
                             </div>
